2002-10-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4:
	* configure:
	* configure.in: move the CFLAGS definition into TEA_ENABLE_SHARED
	and make it pick up the env CFLAGS at configure time.

2002-10-15  Andreas Kupries  <andreask@pliers.activestate.com>

	* configure.in: Changed to propagate an initial CFLAGS value to
	  the final definition. A TEA condition (SHARED_BUILD == 1)
	  squashed it, causing it the build system to loose the
	  +DAportable we specify for the AS PA-RISC2.2 build host. This is
	  a problem for _all_ TEA and TEA 2 based configure files.

2002-09-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclExtdInt.h: added TclX_(Struct)Offet header
	* generic/tclXutil.c: added TclX_StructOffset to handle the
	changes in the size of Tcl_HashTable when embedded in a structure.

	* generic/tclExtend.h: added support for 8.4 CONSTification (TIP 27)
	* generic/tclXbsearch.c:
	* generic/tclXcmdloop.c:
	* generic/tclXdebug.c:
	* generic/tclXdup.c:
	* generic/tclXfilecmds.c:
	* generic/tclXlib.c:
	* generic/tclXprofile.c:
	* generic/tclXsignal.c:
	* generic/tclXstring.c:

	* tests/profile.test: support changed error msgs between 8.3 and 8.4
	* tests/string.test:
	* tests/tcllib.test:

2002-04-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure:
	* tcl.m4: Enabled COFF as well as CV style debug info with
	--enable-symbols to allow Dr. Watson users to see function info.
	More info on debugging levels can be obtained at:
	http://msdn.microsoft.com/library/en-us/dnvc60/html/gendepdebug.asp

2002-04-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclXgeneral.c (TclX_EchoObjCmd): use encoding aware
	functions in 8.1+. [Bug #514053]

	* generic/tclXselect.c: allow to compile on Windows as well
	(although select isn't supported).

	* Makefile.in: correct install targets
	* configure:
	* configure.in:
	* tclconfig/tcl.m4: update to latest TEA base files

	* win/tclXwinCmds.c: use the generic select command definition